--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1828,10 +1828,12 @@ Usage (In Ghost editor):
     max-width: 920px;
 }
 
+/* SINA: removing this, it makes first paragraph larger than others.
 .post-template .post-content > p:first-child {
     font-size: 1.25em;
     line-height: 1.5em;
 }
+*/
 
 .post-full-content .kg-image {
     max-width: 100%;
