Update top_posts to include links to my own website

--- a/top_posts.hbs
+++ b/top_posts.hbs
@@ -41,28 +41,25 @@
 
                 <ul>
                     <li>
-                        <a href='https://medium.freecodecamp.com/the-programmers-guide-to-booking-a-concert-e048a580735f' target='_blank'>The Programmer's Guide to Booking a Concert</a>
+                        <a href='https://sinahab.com/2018/03/truebit-the-marketplace-for-verifiable-computation/' target='_blank'>Truebit: the marketplace for verifiable computation</a>
                     </li>
                     <li>
-                        <a href='/blog/contrarian-beliefs/'>Contrarian Beliefs Lead to Outsized Returns</a>
+                        <a href='https://sinahab.com/2018/02/doge-ethereum/' target='_blank'>Enter the Rabbit Hole: The Doge-Ethereum Art Project</a>
+                    </li>
+                    <li>
+                        <a href='https://sinahab.com/2016/12/the-programmers-guide-to-booking-a-concert/' target='_blank'>The Programmer's Guide to Booking a Concert</a>
+                    </li>
+                    <li>
+                        <a href='https://sinahab.com/2017/01/funkavinci/' target='_blank'>The Machine Made Playlist</a>
+                    </li>
+                    <li>
+                        <a href='https://sinahab.com/2017/07/decentralized-web/' target='_blank'>The arc of the internet is bending back towards decentralization.</a>
+                    </li>
+                    <li>
+                        <a href='https://sinahab.com/2017/05/contrarian-beliefs/' target='_blank'>Contrarian Beliefs Lead to Outsized Returns</a>
                     </li> 
                     <li>
-                        <a href='/blog/decentralized-web/'>The arc of the internet is bending back towards decentralization.</a>
-                    </li>
-                    <li>
-                        <a href='/blog/how-to-prevent-overfitting/'>How to Prevent Overfitting</a>
-                    </li>
-                    <li>
-                        <a href='/blog/reasons-to-join-a-coworking-space/'>Reasons to Join a Coworking Space</a>.
-                    </li>
-                    <li>
-                        <a href='/blog/how-much-should-you-raise/'>How Much Should You Raise?</a>
-                    </li>
-                    <li>
-                        <a href='https://medium.com/@sinahab/why-you-should-write-ea971c13d68' target='_blank'>Why You Should Write</a>.
-                    </li>
-                    <li>
-                        <a href='https://medium.freecodecamp.com/the-machine-made-playlist-faec2c8bc7ba' target='_blank'>The Machine Made Playlist</a>
+                        <a href='https://sinahab.com/2017/05/how-to-prevent-overfitting/' target='_blank'>How to Prevent Overfitting</a>
                     </li>
                 </ul>
 
