Update about page to include Truebit work

--- a/about.hbs
+++ b/about.hbs
@@ -36,6 +36,20 @@
         <main id="site-main" class="site-main outer">
             <div class="inner py2">
                 <p>
+                    I led engineering at <a href='https://truebit.io/', target='_blank'>Truebit</a>, a protocol for verifiable computation on Ethereum. In this capacity, I:
+                    <ul>
+                        <li>
+                            Built the first working implementation of the protocol (<a href='https://github.com/TrueBitFoundation/scrypt-interactive' target='_blank'>Github</a>, <a href='https://youtu.be/8VLg3RuvYNI' target='_blank'>Youtube demo</a>).
+                        </li>
+                        <li>
+                            Wrote our <a href='https://github.com/TrueBitFoundation/wiki/blob/master/docs/vm_spec.md' target='_blank'>WebAssembly virtual machine spec</a>, and <a href='https://github.com/WebAssembly/meetings/blob/master/2018/CG-04.md#webassembly-in-blockchain' target='_blank'>presented</a> at the WebAssembly Community Group.
+                        </li>
+                        <li>
+                            Launched <a href='http://ethprize.io/' target='_blank'>ETHPrize</a>, a project to identify critical issues facing the Ethereum ecosystem and organizes bounties to solve them (our <a href='https://youtu.be/3tKLUkRLhRc?t=35s' target='_blank'>presentation at Ethcc</a>).
+                        </li>
+                    </ul>
+                </p>
+                <p>
                     I led the development of Omadalabs, <a href='https://www.crunchbase.com/organization/omada-health', target='_blank'>Omada Health</a>'s data science platform.
                 </p>
 
@@ -44,15 +58,15 @@
 
                     <ul>
                         <li class='pb1'>
-                            I analyzed Soundcloud <a href='https://medium.com/@sinahab/the-programmers-guide-to-booking-a-concert-e048a580735f#.cfpixp73x', target='_blank'>data</a> to book a sold-out concert in San Francisco.
+                            Analyzed Soundcloud <a href='https://medium.com/@sinahab/the-programmers-guide-to-booking-a-concert-e048a580735f#.cfpixp73x', target='_blank'>data</a> to book a sold-out concert in San Francisco.
                         </li>
 
                         <li class='py1'>
-                            I built an <a href='https://merklelabs.sh/' target='_blank'>analytics suite</a> to monitor ERC20 and Ether transactions on the Ethereum mainnet.
+                            Built an <a href='https://merklelabs.sh/' target='_blank'>analytics suite</a> to monitor ERC20 and Ether transactions on the Ethereum mainnet.
                         </li>
 
                         <li class='pt1'>
-                            I built <a href='http://www.funkavinci.com/' target='_blank'>Discover Weekly for live music</a>.
+                            Built <a href='http://www.funkavinci.com/' target='_blank'>Discover Weekly for live music</a>.
                         </li>
                     </ul>
                 </p>
