Update about page

--- a/about.hbs
+++ b/about.hbs
@@ -36,7 +36,7 @@
         <main id="site-main" class="site-main outer">
             <div class="inner py2">
                 <p>
-                    I led engineering at <a href='https://truebit.io/', target='_blank'>Truebit</a>, a protocol for verifiable computation on Ethereum. In this capacity, I:
+                    I led engineering at <a href='https://truebit.io/', target='_blank'>Truebit</a>, a protocol for verifiable computation on Ethereum. In this capacity, we:
                     <ul>
                         <li>
                             Built the first working implementation of the protocol (<a href='https://github.com/TrueBitFoundation/scrypt-interactive' target='_blank'>Github</a>, <a href='https://youtu.be/8VLg3RuvYNI' target='_blank'>Youtube demo</a>).
@@ -58,7 +58,7 @@
 
                     <ul>
                         <li class='pb1'>
-                            Analyzed Soundcloud <a href='https://medium.com/@sinahab/the-programmers-guide-to-booking-a-concert-e048a580735f#.cfpixp73x', target='_blank'>data</a> to book a sold-out concert in San Francisco.
+                            Analyzed Soundcloud <a href='https://sinahab.com/2016/12/the-programmers-guide-to-booking-a-concert/', target='_blank'>data</a> to book a sold-out concert in San Francisco.
                         </li>
 
                         <li class='py1'>
