Update Omada description in /about page

--- a/about.hbs
+++ b/about.hbs
@@ -50,7 +50,7 @@
                     </ul>
                 </p>
                 <p>
-                    I led the development of Omadalabs, <a href='https://www.crunchbase.com/organization/omada-health', target='_blank'>Omada Health</a>'s data science platform.
+                    I led the development of <a href='https://www.crunchbase.com/organization/omada-health', target='_blank'>Omada Health</a>'s data science platform.
                 </p>
 
                 <p>
